# vecr

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  RETENTION.md  pyproject.toml
.github/workflows/: ci.yml
bench/: hotpotqa_probe.py  hotpotqa_results.md  latency.py  needle.py
docs/: BENCHMARK.md  DEPRECATION_SHIMS.md  comparison.md  when-to-use.md
examples/: basic.py  with_langchain.py  with_llamaindex.py
integrations/: LANGCHAIN_INTEGRATION_DOC.md  LLAMAINDEX_INTEGRATION_DOC.md  PR_LANGCHAIN.md  PR_LLAMAINDEX.md
integrations/langchain-vecr-compress/: LICENSE  README.md  pyproject.toml
integrations/langchain-vecr-compress/src/langchain_vecr_compress/: __init__.py
integrations/langchain-vecr-compress/tests/: test_shim.py
integrations/llama-index-postprocessor-vecr/: README.md  pyproject.toml
integrations/llama-index-postprocessor-vecr/src/llama_index/postprocessor/vecr/: __init__.py
integrations/llama-index-postprocessor-vecr/tests/: test_shim.py
src/vecr_compress/: __init__.py  compressor.py  retention.py  scorer.py  tokens.py
src/vecr_compress/adapters/: __init__.py  langchain.py  llamaindex.py
tests/: test_adapters.py  test_compressor.py  test_retention.py  test_retention_property.py  test_scorer.py
