[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-vecr-compress"
version = "0.1.0"
description = "LangChain integration for vecr-compress: deterministic retention-guaranteed LLM context compression."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "vecr contributors" },
]
keywords = ["langchain", "llm", "compression", "retention", "context", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]
dependencies = [
    "vecr-compress>=0.1.0",
    "langchain-core>=0.2",
]

[project.urls]
Homepage = "https://github.com/h2cker/vecr"
Repository = "https://github.com/h2cker/vecr/tree/main/integrations/langchain-vecr-compress"
"Bug Tracker" = "https://github.com/h2cker/vecr/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_vecr_compress"]

[tool.pytest.ini_options]
testpaths = ["tests"]
