[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama-index-postprocessor-vecr"
version = "0.1.0"
description = "LlamaIndex postprocessor for vecr-compress: deterministic retention-guaranteed node compression."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "vecr contributors" },
]
keywords = ["llama-index", "llm", "compression", "retention", "context", "rag", "postprocessor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]
dependencies = [
    "vecr-compress>=0.1.0",
    "llama-index-core>=0.10",
]

[project.urls]
Homepage = "https://github.com/h2cker/vecr"
Repository = "https://github.com/h2cker/vecr/tree/main/integrations/llama-index-postprocessor-vecr"
"Bug Tracker" = "https://github.com/h2cker/vecr/issues"

[tool.hatch.build.targets.wheel]
sources = ["src"]
packages = ["src/llama_index/postprocessor/vecr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
